refactor:优化代码格式